# DIY_Framework-Free_N_Network

./: .gitignore  Dockerfile  LICENSE  README.md  manual-ci  setup.cfg  todo.md
cpp_nn/: activations.cpp  activations.h  cpp_nn.pro  initializers.cpp  initializers.h  layers.cpp  layers.h  losses.cpp  losses.h  module.cpp  module.h  optimizers.cpp  optimizers.h  train.cpp  utils.cpp  utils.h
dqn/: agent.py  main.py  memory.py  model.py  play.py
framework/: train.py
framework/numpy_nn/: __init__.py  activations.py  initializers.py  layers.py  losses.py  module.py  optimizers.py  sequential.py  utils.py
framework/pure_nn/: __init__.py  activations.py  initializers.py  layers.py  losses.py  module.py  optimizers.py  utils.py
java_nn/src/: Module.java  train.java
java_nn/src/Activations/: Activation.java  Linear.java  ReLU.java
java_nn/src/Initializers/: Constant.java  HeNormal.java  Initializer.java  RandomUniform.java  TestInitializers.java  XavierUniform.java
java_nn/src/Layers/: BatchNorm1d.java  Dense.java  Layer.java
java_nn/src/Losses/: CrossEntropyLoss.java  Loss.java  LossFunc.java  MSELoss.java
java_nn/src/Optimizers/: AdaGrad.java  Adam.java  Momentum.java  Optimizer.java  RMSProp.java  SGD.java
java_nn/src/Utils/: Utils.java
