[metadata]
name = DIY_Framework-Free_N_Network
version = 0.1.3
author = Gowthambalan
author_email = gowthamfutureai@gmail.com
description = Building Neural Networks from scratch.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Gowthambalan/DIY_Framework-Free_N_Network/upload/main

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    tabulate
    numpy

package_dir =

packages = find:
python_requires = >=3.6

[options.packages.find]
where =
